fixed skills section on mobiles

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -18,8 +18,8 @@
     display: flex;
     flex-direction: column-reverse;
     margin: var(--margin-24px);
-    width: 250px;
-    max-width: 15%;
+    width: 15%;
+    max-width: 350px;
     text-align: center;
     border-radius: var(--default-radius);
     transition: all 0.3s ease-out;
@@ -39,11 +39,14 @@
     .skills__container {
         width: 100%;
     }
+    .skills__item {
+        width: 25%
+    }
 }
 
 @media (max-width: 460px) {
     .skills__item img {
-        padding: 1.1rem;
+        padding: 1.5rem;
     }
 
     .h3__mobile {
